--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-# asgiref==3.5.2
+asgiref==3.5.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
 Django==4.1.3
+gunicorn==20.1.0
 idna==3.4
 pyTelegramBotAPI==4.7.1
 requests==2.28.1
